--- a/shop/.graphql-let.yml
+++ b/shop/.graphql-let.yml
@@ -1,4 +1,4 @@
-schema: http://38.242.199.115:4000/graphql
+schema: http://localhost:4000/graphql
 documents: ./src/framework/graphql/**/*.graphql
 plugins:
   - typescript-operations
